# COVID-19-Tracker-PH

./: .editorconfig  .gitignore  .pylintrc  404.html  CNAME  Gemfile  LICENSE  Makefile  README.md  _config.yml  about.html  data.py  datadrop.py  deploy.py  feed.xml  generate-charts.py  index.html  install-dependencies.sh  package.json  pyproject.toml  setup-python.sh  sitemap.xml  tags.html  trackerchart.py  update-tracker.py
_includes/: chart_image.html  footer.html  head.html  image.html  navigation.html  svg-icon.html
_layouts/: confirmed-cases.md  post.html  tracker copy.html  tracker.html  tracker_active_cases.html  tracker_confirmed_cases.html  tracker_deaths.html  tracker_default.html  tracker_recoveries.html  tracker_reporting.html  tracker_testing.html
_posts/: 2020-07-22-covid-19-tracker-ph-go-live-at-new-server.md  2020-07-22-testing.md  2020-07-26-covid-19-tracker-ph-gets-a-new-theme.md  2020-08-03-new-onset-and-recovery-proxy-charts.md  2020-08-09-new-summary-table.md  2020-09-02-added-active-cases-and-more.md
about/: index.html
assets/: .sprockets-manifest-34ed07e99adcb0298f6ceb0ff54f9e8f.json  .sprockets-manifest-4e42d2f054370a19dd5dab564966e765.json  .sprockets-manifest-db9388d3c221d5bfd75b2a15122b9c60.json  dark-06f2d357c89bc60f7c849713fa30ea681c04b8cc7e1d8aea3765aacc480062af.css  dark-2a9c84e42a8186b636547e450ccc98e890d432ba15126d53aaf257db60299223.css  dark-2caa13ccfc297a04aa94277c85851295c886f26c4e27c48e500b1ff9b2c5f54c.css  dark-3484d01675e810b58b25ec9b19bcddb44541bd88ac1d1a7641187ce5c1d9acfe.css  (+9 more)
charts/: Active.html  Active14days.html  (+98 more)
(+239 files in other folders)
