[tool.poetry]
name = "covid-19-tracker-ph"
version = "0.1.0"
description = ""
authors = ["donfiguerres <lyndonfiguerres@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
google-api-client = "^3.14.159265359"
google-auth-oauthlib = "^0.4.6"
PyPDF2 = "^1.26.0"
pandas = "^1.3.3"
numpy = "^1.21.2"
plotly = "^5.3.1"
google-api-python-client = "^2.23.0"
scipy = "^1.7.1"
pytest = "^6.2.5"
pylint = "^2.11.1"
pytest-mock = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
