[tool.poetry]
name = "covid19trackerph"
version = "0.1.0"
description = ""
authors = ["donfiguerres <lyndonfiguerres@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
google-auth-oauthlib = "^0.4.6"
PyPDF2 = "^1.27.5"
pandas = "^1.3.3"
numpy = "^1.21.2"
plotly = "^5.3.1"
google-api-python-client = "^2.23.0"
scipy = "^1.7.1"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^6.2.5"
pylint = "^2.11.1"
pytest-mock = "^3.7.0"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
updatetracker = "covid19trackerph.updatetracker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
